little changes in js

--- a/index.html
+++ b/index.html
@@ -155,12 +155,16 @@
             <div id="gallery-popup" class="gallery-popup">
                 <div class="gallery-popup-content">
                   <span class="close-button">&times;</span>
-                  <div class="gallery-navigation">
-                    <button class="previous-button" disabled>Previous</button>
-                    <span class="photo-count">1/31</span>
-                    <button class="next-button">Next</button>
-                  </div>
+                  
                   <img id="gallery-image" src="images/img1.jpg" alt="Lake view deck">
+                  <div class="gallery-navigation">
+                    <button class="previous-button" disabled><i class="fa-solid fa-chevron-left"></i></button>
+                    <button class="next-button"><i class="fa-solid fa-chevron-right"></i></button>
+                  </div>
+                  <div class="gallery-title">
+                    <h3>Juneau Vacation Rental | 2BR | 1BA | 1,115 Sq Ft | Stairs Required</h3>
+                    <span class="photo-count">1/31</span>
+                  </div>
                 </div>
               </div>
             <div>
@@ -395,7 +399,7 @@
                 </div>
 
                 <div class="bathroom">
-                    <h4>1 bathroom</h2>
+                    <h4>1 bathroom</h4>
                         <p>Full Bathroom</p>
                 </div>
             </div>
