all necessary things are added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span>Share</span>
                     </a>
 
-                    <!--share modal-->
+                   <!-- Share popup modal for copy link -->
                     <div class="share-popup hidden">
                         <div class="share-content">
                             <img src="images/img1.jpg" alt="Juneau Vacation Home" class="share-image" />
@@ -102,7 +102,7 @@
                                 <span>Facebook</span>
                             </a>
                             <a href="#" class="share-option copy-link">
-                                <i class="fa-solid fa-copy"></i>
+                                <i class="fa-solid fa-link"></i>
                                 <span>Copy link</span>
                             </a>
                         </div>
@@ -611,7 +611,7 @@
                 <div class="rules-content">
                     <div class="check-times">
                         <div class="check-time">
-                            <p>Check in after 3:00 PM</p>
+                            <p class=>Check in after 3:00 PM</p>
                             <p>Check out before 11.00 AM</p>
                         </div>
                         <div class="minimum-age">Minimum age to rent: 25</div>
